[gd_scene load_steps=3 format=3 uid="uid://dyg16goh4fsw2"]

[ext_resource type="Script" path="res://Scripts/dialogue.gd" id="1_dodj1"]
[ext_resource type="Texture2D" uid="uid://rfokq3kgb05p" path="res://Sprites/Portraits/proton_big.png" id="2_di4rn"]

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dodj1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -162.0
offset_right = 289.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="NameLeft" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Proton"

[node name="NameRight" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Scien"

[node name="DialogueText" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "This is the dialogue text"

[node name="PortraitLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -94.0
offset_right = -314.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_di4rn")
expand_mode = 1

[node name="PortraitRight" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = -94.0
offset_right = 512.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_di4rn")
expand_mode = 1
